--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,5 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p Welcome to #{title}.  This is where we would develop a GUI to help test endpoints.
+  p For now, refer to the curl commands in the readme.
